Fix crash if asked to index invalid pdf document. Fix is as suggested in the poppler-qt4 example.

BUG: 310912